[project]
name = "loading"
version = "0.1.0"
description = "small project for practice pip and poetry"
authors = [
    {name = "selborji"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "python-dotenv==1.2.2"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
